! MPCVideoDec: H.264 DXVA decoder skipped broken frames on interlaced material
! MpegSplitter: Removed crackling from LPCM tracks when switching and seeking
! MpegSplitter: Fix incorrect detection of MPEG Audio stream as AAC
! AviSplitter: Fix looping not working on short animations
! WebServer: Fix a few errors and typos
! Fix the remember file/DVD position feature: the positions' cache was not cleared when
  disabling the feature
! The Windows 7 taskbar was sometimes not correctly updated (for example when opening
  another video without closing the previous one). The preview was incorrectly cropped
  when the menu was hidden.
! Fix DVBSub: the subtitles' color was incorrect
! Ticket #869, The playlist visibility state was incorrectly restored when MPC-HC
  was quited in fullscreen mode while the option "Hide on fullscreen" was enabled
! Ticket #1182, Unable to playback MPEG-2 in AVI
! Ticket #1290, Fix the reversed behavior of the playlist option "Hide on fullscreen"
  when the "Launch files in fullscreen" option is enabled
! Ticket #1589, Crash with "Null (uncompressed)"
! Ticket #1706, CSS 2.1 and HTML 4.01 Validation for the WebServer files
! Ticket #1946, Skipping bug with EVR custom output and .webm with vsync on
! Ticket #2090, Better handling of font fallback in the MediaInfo dialog so that
  the font size is now correctly adapted to the font used
! Ticket #2133, Javascript error in "player.html"
! Ticket #2137, Disable animation when pressing the "Boss" key
! Ticket #2155, Change the background color of the options pages caption so that
  it is readable with all Windows themes
! Ticket #2156, MPCVideoDec: Incorrect number of frames at the end of playback
  with software decoding
! Ticket #2161, Prevent the "Open" dialog from being opened multiple times (for
  example when double clicking on the tray icon)
! Ticket #2172, MP4Splitter: skip video tracks with motionless frames