@@ -112,3 +112,5 @@ Legend:
 ! Ticket #2161, Prevent the "Open" dialog from being opened multiple times (for
   example when double clicking on the tray icon)
 ! Ticket #2172, MP4Splitter: skip video tracks with motionless frames
+! Ticket #2274, MPCVideoDecoder: the configured threads count was ignored when the
+  decoder had to fallback in software mode because of a DXVA incompatible file
